[gd_scene load_steps=16 format=2]

[ext_resource path="res://LegendOfZelda/Scripts/Witch.gd" type="Script" id=1]
[ext_resource path="res://LegendOfZelda/Assets/witch.png" type="Texture" id=2]
[ext_resource path="res://LegendOfZelda/Scripts/DialogChoices.gd" type="Script" id=3]
[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://LegendOfZelda/Scenes/TextPanel.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 141 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 141 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 141 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.5
} ]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 4 )

[node name="Witch" type="Area2D"]
position = Vector2( 60, -150 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
scale = Vector2( 8, 15 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true

[node name="WitchL1" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL1"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL1/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 7 )
text = "I used to be the greatest WITCH in all the land. But these days, I’m feeling a tad stressed."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“What’s the matter?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“I fail to see why I should care.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL1/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WitchL2" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL2"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL2/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 7 )
text = "I’ve lost my BROOMSTICK! How am I supposed to be a good WITCH without my BROOMSTICK?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“Life is cruel. Deal with it.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“Where did you last leave it?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL2/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WitchL3" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WitchL3"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WitchL3/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 7 )
text = "Oh, it’s just over there - I just can’t catch it! It’s flying around on its own. Would you be a dear and catch it for me?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“I’ll see what I can do.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 8 )
text = "“I could. I won’t, though.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WitchL3/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejectPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="RejectPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="RejectPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="RejectPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 10 )
text = "My, my! What a rude little fellow you are! Do not speak to me again, or I shall turn you into a toad!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinTeamPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="JoinTeamPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="JoinTeamPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="JoinTeamPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 10 )
text = "My BROOM! How marvelous! Now I can cast my spells and brew potions again. Thank you, friend! Allow me to join you on your journey."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_7UP_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Witch_body_exited"]
[connection signal="about_to_show" from="WitchL1" to="WitchL1/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="about_to_show" from="WitchL1" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WitchL1" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WitchL1/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="WitchL2" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="about_to_show" from="WitchL2" to="WitchL2/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="popup_hide" from="WitchL2" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WitchL2/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="WitchL3" to="WitchL3/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="about_to_show" from="WitchL3" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WitchL3" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WitchL3/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="RejectPanel" to="." method="_on_RejectPanel_about_to_show"]
[connection signal="popup_hide" from="RejectPanel" to="." method="_on_RejectPanel_popup_hide"]
[connection signal="about_to_show" from="JoinTeamPanel" to="." method="_on_JoinTeamPanel_about_to_show"]
[connection signal="popup_hide" from="JoinTeamPanel" to="." method="_on_JoinTeamPanel_popup_hide"]
